reduce branch to trigger merge

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -2,7 +2,7 @@ name: Merge working branch
 
 on:
   push:
-    branches: [coding, master]
+    branches: [coding]
   workflow_dispatch:
     inputs:
 
