add google site verification

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: TUAT Static Syllabus
 description: []
 exclude: ['test']
+google_site_verification: F_BTfYKQV3pUb6ZVGCrmDDt4oIyqE05bQ9Lv5fP8tqM
